--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
 .gradle
+.idea
 /local.properties
 /.idea/libraries
 /.idea/modules.xml
@@ -8,3 +9,8 @@
 /build
 /captures
 .externalNativeBuild
+gradle.properties
+gradle/
+gradlew
+gradlew.bat
+settings.gradle
